# Smollu

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
cmake/: compiler.cmake  compiler_mlir.cmake  demo.cmake  emulator.cmake  llvm_from_submodule.cmake  tests.cmake  vm.cmake
compiler/: CMakeLists.txt  README.md  smollu_bytecode_codegen.c  smollu_compiler.c  smollu_compiler.h  smollu_native_tables.h  smollu_parser.c
compiler/test/: test_smollu_bytecode_codegen.c  test_smollu_lexer.c  test_smollu_parser.c
compiler_mlir/: CMakeLists.txt
compiler_mlir/include/Smollu/: Lexer.h  NativeRegistry.h  Passes.h  SmolDialect.h  SmolDialect.td  SmolMLIRGen.h  SmolOps.h  SmolOps.td  SmolluASMEmitter.h  SmolluAST.h  SmolluDialect.h  SmolluDialect.td  SmolluMLIRGen.h  SmolluOps.h  SmolluOps.td  SmolluParser.h
compiler_mlir/lib/CodeGen/: ASMEmitter.cpp  BytecodeEmitter.cpp
compiler_mlir/lib/Dialect/: SmolDialect.cpp  SmolluDialect.cpp
compiler_mlir/lib/Lexer/: Lexer.cpp
compiler_mlir/lib/Parser/: ASTParser.cpp  MLIRGenerator.cpp  Parser.cpp  SmolMLIRGen.cpp  SmolluParser.cpp
compiler_mlir/lib/Pass/: DeadCodeElimination.cpp  PromoteNumerics.cpp  ResolveNativeCalls.cpp  ScopeVerification.cpp
compiler_mlir/src/: smollu-mlir-compiler.cpp
compiler_mlir/targets/: README.md  demo.yaml  rs-emulator.yaml
demo/: demo.smol  demo.smolbc.ast  demo_bytecode.h  smollu_demo.c
demo/LED Matrix demo/: README.md  animation_demo.smol  basic_led_demo.smol
demo/Simple demo/: demo.smol  smollu_demo.c
doc/: ByteCode format.md  Instruction Set.md  Language Spec.md
emulator/: .gitignore  Cargo.toml  README.md  build.rs
emulator/c_integration/: wrapper.c  wrapper.h
emulator/examples/: basic_test.rs  simple_test.rs
emulator/src/: lib.rs  main.rs
emulator/src/gui/: app.rs  mod.rs
emulator/src/gui/widgets/: console.rs  controls.rs  led_matrix.rs  mod.rs
emulator/src/hardware/: led_matrix.rs  mod.rs
emulator/src/vm/: bindings.rs  mod.rs  wrapper.rs
src/components/compiler/: smollu_bytecode_codegen.c  smollu_compiler.c  smollu_compiler.h  smollu_lexer.c  smollu_parser.c
src/components/vm/: smollu_vm.c  smollu_vm.h
test/: test_smollu_bytecode_codegen.c  test_smollu_lexer.c  test_smollu_parser.c  test_smollu_vm.c
tools/disassembler/: README.md  smollu_disasm.py
vm/: CMakeLists.txt  README.md  smollu_vm.c  smollu_vm.h  test_streaming.c
vm/test/: test_smollu_vm.c
