[package]
name = "smollu-emulator"
version = "0.1.0"
edition = "2021"
authors = ["Lizhou <lisie31s@gmail.com>"]
description = "Rust-based emulator for the Smollu VM with GUI hardware simulation"
license = "MIT"

[dependencies]
# GUI Framework
egui = "0.27"
eframe = "0.27"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
bindgen = "0.69"
cc = "1.0"
